--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "v1",
   "type": "module",
   "version": "0.0.1",
+  "packageManager": "pnpm@10.13.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@astrojs/starlight": "^0.35.1",
     "astro": "^5.6.1",
     "sharp": "^0.34.2"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^4.17.0",
+    "eslint": "^9.31.0",
+    "pnpm": "^10.13.1"
   }
 }
