--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.5.2",
     "@astrojs/starlight": "^0.35.1",
     "astro": "^5.6.1",
     "sharp": "^0.34.2"
