--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.17.0",
+    "@types/react": "^19.2.2",
     "eslint": "^9.31.0",
     "expressive-code-twoslash": "^0.5.3",
     "pnpm": "^10.13.1",
