--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/netlify": "^6.5.2",
     "@astrojs/starlight": "^0.35.1",
     "astro": "^5.6.1",
+    "astro-mermaid": "^1.2.0",
+    "mermaid": "^11.12.1",
     "sharp": "^0.34.2"
   },
   "devDependencies": {
